--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: api2u's Blog
 subtitle:
 description:
 keywords:
-author: John Doe
+author: api2u
 language: en
 timezone:
 
