--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - npm install
   - npm install hexo-renderer-pug --save
   - npm install hexo-renderer-sass --save
-
+  - npm install hexo-generator-feed
 
 #before_script:
  # - npm install -g gulp
