--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://test.api2u.cn
-root: /blog2/
+url: https://blog.api2u.cn
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
