--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,4 @@ branches:
     - blog
 env:
  global:
-   - GH_REF: github.com/ghosthim/blog2.git
+   - GH_REF: github.com/ghosthim/blog.api2u.cn.git
