--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -95,17 +95,17 @@ links:
 
 timeline:
   - num: 1
-    word: Update 2019/4/7：域名 DNS 解析由原注册商 [namecheap](http://www.namecheap.com) 更换到国内解析商 CloudXNS
+    word: Update 2019/4/7 域名 DNS 解析由原注册商 [namecheap](http://www.namecheap.com) 更换到国内解析商 CloudXNS
   - num: 2
-    word: Update 2019/4/12：部署空间由 GitHub  Page 迁移至 Netlify ，原：随着 GitHub Page 空间的滥用，中国大陆境内访问有几率访问失败，我受到 [Yihui的文章](https://yihui.name/en/2017/06/netlify-instead-of-github-pages/) 的启发，决定使用 Netlify，希望能给改善在大陆境内的访问体验。
+    word: Update 2019/4/12 部署空间由 GitHub  Page 迁移至 Netlify ，原：随着 GitHub Page 空间的滥用，中国大陆境内访问有几率访问失败，我受到 [Yihui的文章](https://yihui.name/en/2017/06/netlify-instead-of-github-pages/) 的启发，决定使用 Netlify，希望能给改善在大陆境内的访问体验。
   - num: 3
-    word: Update 2019/6/14：由于 Netlify 绑定顶级域名时只能用 CNAME ，而这会使得顶级域名的 Mail 服务器冲突，故更换博客域名由 youngje.me -> blog.youngje.me
+    word: Update 2019/6/14 由于 Netlify 绑定顶级域名时只能用 CNAME ，而这会使得顶级域名的 Mail 服务器冲突，故更换博客域名由 youngje.me -> blog.youngje.me
   - num: 4
-    word: Update 2019/7/9：由于 CloudXNS 停止免费解析服务，故更换域名解析服务商到 DNS.COM
+    word: Update 2019/7/9 由于 CloudXNS 停止免费解析服务，故更换域名解析服务商到 DNS.COM
   - num: 5
-    word: Update 2019/8/11：经过多次考虑终于做出决定把我本人的网络用名归到一个 api2u ，故更新博客名称及相关内容。
+    word: Update 2019/8/11 经过多次考虑终于做出决定把我本人的网络用名归到一个 api2u ，故更新博客名称及相关内容。
   - num: 6
-    word: Update 2019/9/28: 前几天我的 cn 域名备案就下来了，本来想过几天再把这个站转到新备案的域名上去，哪成想今天我在改 about 页面的时候，好像搞错了一个标点，导致我 push 到 GitHub 上去的时候，报错了，然后 Netlify 自动部署，所以也报错了，随后不管我怎么回档文件，就算是 GitHub 过了 Netlify 还是报错，故只好，转移博客到 GitHub page，更换域名到 api2u.cn ，对所有之前域名作跳转页面处理。
+    word: Update 2019/9/28 前几天我的 cn 域名备案就下来了，本来想过几天再把这个站转到新备案的域名上去，哪成想今天我在改 about 页面的时候，好像搞错了一个标点，导致我 push 到 GitHub 上去的时候，报错了，然后 Netlify 自动部署，所以也报错了，随后不管我怎么回档文件，就算是 GitHub 过了 Netlify 还是报错，故只好，转移博客到 GitHub page，更换域名到 api2u.cn ，对所有之前域名作跳转页面处理。
   - num: 7
     word: Now
 
