--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ after_script:
   - git add .
   - git commit -m "Update docs"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - git push --force --quiet "https://${CO_TOKEN}@${CO_REF}" master:master
 # E: Build LifeCycle
 
 branches:
@@ -30,3 +31,4 @@ branches:
 env:
  global:
    - GH_REF: github.com/ghosthim/blog.api2u.cn.git
+   - CO_REF: git.coding.net/ghosthim/blog.api2u.cn.git
