--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ after_script:
   - git add .
   - git commit -m "Update docs"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
-  - git push --force --quiet "https://${CO_TOKEN}@${CO_REF}" master:master
+  - git push --force --quiet "https://ghosthim:${CO_TOKEN}@${CO_REF}" master:master
 # E: Build LifeCycle
 
 branches:
