--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle:
 description:
 keywords:
 author: api2u
-language: en
+language: zh-CN
 timezone:
 
 # URL
@@ -92,3 +92,17 @@ feed:
     type: atom
     path: atom.xml
     limit: 20
+
+douban:
+  user: api2u
+  builtin: false
+ #book:
+ #   title: 'This is my book title'
+ #   quote: 'This is my book quote'
+  movie:
+    title: '我都看过啥'
+    quote: '看过这些'
+ # game:
+ #   title: 'This is my game title'
+ #   quote: 'This is my game quote'
+  timeout: 10000 
