--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -67,18 +67,12 @@ menu:
   - page: archive
     directory: archives/
     icon: fa-archive
-  - page: timeline
-    directory: timeline/
-    icon: fa-book
-  - page: about
-    directory: about/
-    icon: fa-user
-  - page: rss
-    directory: atom.xml
-    icon: fa-rss
   - page: movies
     directory: movies/
     icon: fa-bookmark
+  - page: about
+    directory: about/
+    icon: fa-user
 
 widgets: ## Six widgets in sidebar provided: search, category, tag, recent_posts, rencent_comments and links.
   - search
@@ -89,12 +83,10 @@ widgets: ## Six widgets in sidebar provided: search, category, tag, recent_posts
   - links
 
 links:
-  - title: site-name1
-    url: http://www.example1.com/
-  - title: site-name2
-    url: http://www.example2.com/
-  - title: site-name3
-    url: http://www.example3.com/
+  - title: 更新历史
+    url: https://blog.api2u.cn/timeline/
+  - title: 订阅RSS
+    url: https://blog.api2u.cn/atom.xml
 
 timeline:
   - num: 1
