--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -73,6 +73,9 @@ menu:
   - page: about
     directory: about/
     icon: fa-user
+  - page: E
+    directory: categories/english
+    icon: frown-o
 
 widgets: ## Six widgets in sidebar provided: search, category, tag, recent_posts, rencent_comments and links.
   - search
