--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -94,7 +94,7 @@ index_with_subtitle: false
 menu:
   home: / || home
   #tags: /tags/ || tags
-  #categories: /categories/ || th
+  categories: /categories/ || th
   archives: /archives/ || archive
   movies: /movies/ || bookmark
   #schedule: /schedule/ || calendar
