--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ after_script:
   - git config user.name "ghosthim"
   - git config user.email "ghosthim007@gmail.com"
   - git add .
-  - git commit -m "Update docs"
+  - git commit -m "Update by travis-ci.org"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
   - git push --force --quiet "https://dt_ZcGDek:${CO_TOKEN1}@${CO_REF}" master:master
 # E: Build LifeCycle
