--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -315,7 +315,7 @@ font:
   # Font settings for Headlines (h1, h2, h3, h4, h5, h6).
   # Fallback to `global` font settings.
   headings:
-    external: true
+    external: false
     family: Source Han Sans
     size: 
 
