--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -308,8 +308,8 @@ font:
 
   # Global font settings used on <body> element.
   global:
-    external: false
-    family: Lato
+    external: true
+    family: Source Sans Pro
     size:
 
   # Font settings for Headlines (h1, h2, h3, h4, h5, h6).
