--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - npm install hexo-renderer-pug --save
   - npm install hexo-generator-feed
   - npm install hexo-douban --save
+  - npm install hexo-wordcount --save
 
 #before_script:
  # - npm install -g gulp
