--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ node_js: 12
 # S: Build Lifecycle
 install:
   - npm install
-  
-  - npm remove hexo-generator-index
+  - npm install hexo
   
   - npm install hexo-generator-feed
   - npm install hexo-douban --save
