--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: node_js
 node_js: 12
 
+cache:
+  directories:
+  - node_modules #cache models to speed up the build
+before_install:
+  - npm install -g hexo-cli
+
+
 # S: Build Lifecycle
 install:
   - npm install
-  - npm install hexo
-  - npm audit fix
   - npm install hexo-generator-feed
   - npm install hexo-douban --save
   - npm install hexo-wordcount --save
