--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: node_js
-node_js: 12
+node_js: stable
 
-cache:
-  directories:
-  - node_modules #cache models to speed up the build
 before_install:
+  - node_modules
   - npm install -g hexo-cli
 
 
@@ -13,7 +11,6 @@ install:
   - npm install
   - npm install hexo-generator-feed
   - npm install hexo-douban --save
-  - npm install hexo-wordcount --save
 
 #before_script:
  # - npm install -g gulp
