--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-node_js: stable
+node_js: 12
 
 
 cache:
@@ -13,6 +13,7 @@ before_install:
 # S: Build Lifecycle
 install:
   - npm install
+  - npm install hexo-renderer-swig --save
   - npm install hexo-generator-feed
   - npm install hexo-douban --save
 
