--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -36,14 +36,27 @@ seo: false
 
 # When running the site in a subdirectory (e.g. domain.tld/blog), remove the leading slash (/archives -> archives)
 menu:
+  
   home: /
+  #tags: /tags/
+  #categories: /categories/
+  archives: /archives/
+  movies: /movies/
+  history: /history/
+  #E: /categories/English/ || frown-o
+  #schedule: /schedule/
+  about: /about/
+  #sitemap: /sitemap.xml
+  #commonweal: /404/
+  
+  #home: /
   #categories: /categories/
   #about: /about/
-  archives: /archives/
-  tags: /tags/
+  #archives: /archives/
+  #tags: /tags/
   #sitemap: /sitemap.xml
   #commonweal: /404.html
-  guestbook: /guestbook/
+  #guestbook: /guestbook/
 
 
 # Enable/Disable menu icons.
@@ -63,6 +76,8 @@ menu_icons:
   sitemap: sitemap
   commonweal: heartbeat
   guestbook: comments
+  movies: bookmark
+  history: sitemap
 
 
 
@@ -139,8 +154,8 @@ font:
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 social:
   #LinkLabel: Link
-  GitHub: https://github.com/zhoujiealex/
-  StackOverflow: https://stackoverflow.com/users/1386591/zjalex/
+  #GitHub: https://github.com/zhoujiealex/
+  #StackOverflow: https://stackoverflow.com/users/1386591/zjalex/
 
 
 
@@ -190,7 +205,7 @@ sidebar:
   #  - always  expand for all pages automatically
   #  - hide    expand only when click on the sidebar toggle icon.
   #  - remove  Totally remove sidebar including sidebar toggler.
-  display: post
+  #display: post
   #display: always
   #display: hide
   #display: remove
@@ -356,9 +371,9 @@ facebook_comments_plugin:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: true
-  app_id: Hla639U7xDAWLJLhOqSgLhvy-gzGzoHsz
-  app_key: C8ubwzRtIYV9J5qA0wfjQBct
+  enable: false
+  app_id: 
+  app_key: 
 
 # Show PV/UV of the website/page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
