更新网站历史相关

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -47,8 +47,7 @@ menu:
   #schedule: /schedule/
   about: /about/
   #sitemap: /sitemap.xml
-  #commonweal: /404/
-  
+  #commonweal: /404
   #home: /
   #categories: /categories/
   #about: /about/
