--- a/themes/typography/_config.yml
+++ b/themes/typography/_config.yml
@@ -1,5 +1,5 @@
-title_primary: "猫与向日葵" # the bigger text
-title_secondary: "浊以静之徐清，安以动之徐生" # the smaller text
+title_primary: "API2U" # the bigger text
+title_secondary: "不存在什么中立的" # the smaller text
 keywords:
 
 twitter: #journey-ad
