--- a/themes/typography/_config.yml
+++ b/themes/typography/_config.yml
@@ -7,6 +7,7 @@ rss: atom.xml
 weibo: #username/id
 instagram: #username
 github: #journey-ad
+douban: movies/
 
 # Choose the comment service according to your need.
 # Please do not use the two services at the same time.
