--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ after_script:
   - git commit -m "Update by travis-ci.org"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
   - git push --force --quiet "https://gRubDUuXWX:${CO_TOKEN2}@${CO_REF}" master:master
+  - node to-oss.js
   
 # E: Build LifeCycle
 
