更换在线文件地址到自己的库

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,16 +25,16 @@ before_script:
   - mkdir tools
   - cd ./tools
   ## 下载阿里云 OSS Linux 客户端
-  - wget -nc https://liuhu-img.oss-cn-hongkong.aliyuncs.com/common/deploy/ossutil64
+  - wget -nc https://cdn.jsdelivr.net/gh/ghosthim/api2u-cdn@master/hexo-oss/ossutil64
   - chmod 755 ossutil64
   ## 配置 OSS 客户端, 包括 OSS 地址，accessKeyID accessKeySecret，使用方式可以参考 https://www.alibabacloud.com/help/zh/doc-detail/50452.htm
   - ./ossutil64 config -e "oss-cn-hongkong.aliyuncs.com" -i "${UPTOC_UPLOADER_KEYID}" -k "${UPTOC_UPLOADER_KEYSECRET}"
   ## 替换 Hexo 插件，使其支持静态部署
   - cd ../node_modules/hexo/lib/plugins/helper
-  - wget -N https://liuhu-img.oss-cn-hongkong.aliyuncs.com/common/deploy/list_categories.js
-  - wget -N https://liuhu-img.oss-cn-hongkong.aliyuncs.com/common/deploy/list_tags.js
-  - wget -N https://liuhu-img.oss-cn-hongkong.aliyuncs.com/common/deploy/paginator.js
-  - wget -N https://liuhu-img.oss-cn-hongkong.aliyuncs.com/common/deploy/tagcloud.js
+  - wget -N https://cdn.jsdelivr.net/gh/ghosthim/api2u-cdn@master/hexo-oss/list_categories.js
+  - wget -N https://cdn.jsdelivr.net/gh/ghosthim/api2u-cdn@master/hexo-oss/list_tags.js
+  - wget -N https://cdn.jsdelivr.net/gh/ghosthim/api2u-cdn@master/hexo-oss/paginator.js
+  - wget -N https://cdn.jsdelivr.net/gh/ghosthim/api2u-cdn@master/hexo-oss/tagcloud.js
   - cd -
   - cd ..
 
