--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,15 @@ before_install:
 install:
   - npm install
 # - npm install hexo-renderer-swig --save
-  - npm uninstall --save hexo-generator-category # 此处我们使用 hexo-generator-category-enhance
-  - npm install --save hexo-renderer-jade hexo-generator-archive hexo-generator-category-enhance hexo-generator-feed hexo-generator-tag
-  - npm install --save hexo-prism-plugin # 语法高亮支持
-# - npm uninstall hexo-generator-feed
+# - npm uninstall --save hexo-generator-category # 此处我们使用 hexo-generator-category-enhance
+# - npm install --save hexo-renderer-jade hexo-generator-archive hexo-generator-category-enhance hexo-generator-feed hexo-generator-tag
+# - npm install --save hexo-prism-plugin # 语法高亮支持
+  - npm uninstall hexo-generator-feed
   - npm install hexo-douban --save
 # - npm install hexo-deployer-ali-oss --save
   - npm install owo --save
+  - npm install hexo-renderer-ejs --save
+  - npm install hexo-wordcount --save
 
 
 before_script:
