--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: :D
 description: "👾"
 keywords:
 author: api2u
-language: zh-cn
+language: zh-CN
 timezone:
 
 # URL
@@ -93,7 +93,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: typography
+theme: Hola
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
