--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^1.0.1",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.3"
+    "hexo-server": "^0.3.3",
+    "mobx": "^4.1.0",
+    "mobx-react": "^5.0.0"
   }
 }
