--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
     "mobx": "^4.1.0",
-    "mobx-react": "^5.0.0"
+    "mobx-react": "^5.0.0",
+    "react": "^0.13.0"
   }
 }
