--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
   - npm install owo --save
   - npm install hexo-renderer-ejs --save
   - npm install hexo-wordcount --save
+  - npm install --save gitment
 
 
 before_script:
