--- a/themes/Hola/_config.yml
+++ b/themes/Hola/_config.yml
@@ -41,11 +41,11 @@ hitokoto: disabled
 baidu_verification: 
 
 # Gitment
-gitment:
-  owner: ghosthim
-  repo: siteshow
-  client_id: 33c48a5302663d6cb62c
-  client_secret: b504cf9938d10219d43a2336b9288734cf47638c
+#gitment:
+  #owner: ghosthim
+  #repo: siteshow
+  #client_id: 33c48a5302663d6cb62c
+  #client_secret: b504cf9938d10219d43a2336b9288734cf47638c
 
 # 腾讯统计
 tencent_analytics: 
@@ -65,6 +65,5 @@ scripts:
 - /js/fetch.min.js
 - /js/md5.min.js
 - /js/instantclick.min.js
-- /js/gitment.browser.min.js
 - /js/hola.js
 - /js/alu.js
