--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ install:
   - npm install hexo-renderer-ejs --save
   - npm install hexo-wordcount --save
   - npm install hexo-pangu
+  - npm install hexo-tag-dplayer --save
 
 
 before_script:
