--- a/config.toml
+++ b/config.toml
@@ -28,6 +28,6 @@ link = "https://api2u.me"
 name = "Github"
 link = "https://github.com/ghosthim"
 postHeaderContent = ""
-postFooterContent = "<br/><br/><p>Subscribe to：<a target='_blank' href='https://mailchi.mp/a1a0d59e7a19/joway'>Joway's Blog</a></p>"
+postFooterContent = ""
 # extraCSSFiles = ["css/foo.css", "css/bar.css"]
 extraCSSFiles = []
