--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-node_js: stable
+node_js: v12.16.2
 
 
 cache:
@@ -22,7 +22,10 @@ install:
   - npm install owo --save
   - npm install hexo-renderer-ejs --save
   - npm install hexo-wordcount --save
-
+  - npm install hexo-pangu
+  - npm uninstall hexo-math --save
+  - npm uninstall hexo-renderer-mathjax --save
+  - npm install hexo-renderer-mathjax2 --save
 
 before_script:
   - mkdir tools
@@ -41,12 +44,15 @@ before_script:
   - cd -
   - cd ../node_modules/marked/lib
   - wget -N https://cdn.jsdelivr.net/gh/ghosthim/api2u-cdn@master/hexo-marked/marked.js
-  - cd - 
+  - cd -
+#  - cd ../node_modules/hexo-renderer-mathjax
+#  - wget -N https://cdn.jsdelivr.net/gh/ghosthim/api2u-cdn@master/mathjax.html
+#  - cd -
   - cd ..
 
 script:
   - hexo cache clean
-  - hexo g
+  - hexo g --debug
 #  - hexo douban
 
 
@@ -61,11 +67,11 @@ after_script:
   - git push --force --quiet "https://gRubDUuXWX:${CO_TOKEN2}@${CO_REF}" master:master
 
     ## 打包静态文件
-  - zip -r blog.zip ./*
+#  - zip -r blog.zip ./*
   ## 删除OSS上旧文件
-  - ../tools/ossutil64 rm oss://api2u-blog/ -r -f
+#  - ../tools/ossutil64 rm oss://api2u-blog/ -r -f
   ## 上传zip文件
-  - ../tools/ossutil64 cp -f blog.zip oss://api2u-blog/
+#  - ../tools/ossutil64 cp -f blog.zip oss://api2u-blog/
   
 # E: Build LifeCycle
 
