--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: api2u's Blog
-subtitle: :D
+subtitle: 脑子笨又爱钻牛角尖
 description: "👾"
 keywords:
 author: api2u
@@ -113,6 +113,7 @@ plugins:
     hexo-prism-plugin
     hexo-toc
     hexo-generator-feed
+    hexo-renderer-mathjax2
 #Feed Atom
 feed:
     type: atom
@@ -138,3 +139,5 @@ prism_plugin:
   mode: 'preprocess'
   theme: 'default'
   line_number: true 
+mathjax:
+  cdn: 'https://cdn.bootcss.com/mathjax/2.7.1/MathJax.js'
