--- a/themes/Hola/_config.yml
+++ b/themes/Hola/_config.yml
@@ -28,7 +28,7 @@ social:
 footer_wordcount: enabled
 
 # 底部版权补充
-footer_expand: 'Hosted by <a target="_blank" href="https://www.aliyun.com">Aliyun</a>, Serving <a target="_blank" href="https://status.api2u.me">Status</a>, '
+footer_expand: 'Hosted by <a target="_blank" href="https://www.aliyun.com">Aliyun</a>, Serving <a target="_blank" href="https://status-api2u.herokuapp.com/">Status</a>, '
 
 # 站点微缩图
 favicon: /favicon.ico
@@ -48,11 +48,12 @@ valine:
   app_key: u2hYkyvjziNpfqL6T4fiH6zS
   notify: false   #邮件提醒设置
   verify: false   #验证码设置
-  placeholder: 有什么想说一下的吗？
+  placeholder: 有什么想说一下的吗？\n 已开启邮箱提醒，可添加 blog_comment@api2u.me 至白名单。
   avatar: ''  #头像设置
   pageSize: 10
   visitor: true
-
+  
+  
 # Gitment
 #gitment:
   #owner: ghosthim
